# SensorDataSim

./: .gitignore  README.md  environment.yml  foxglove_layout_avride_mcap.json  pyproject.toml  requirements.txt  run_sim.py  sim.yaml
scripts/: __init__.py  build_car_asset_library.py  extract_static_cars_fullres.py  fit_ego_trajectory.py  make_lidar_camera_side_by_side.py  plan_dynamic_agents.py  preprocess.py
sim/: __init__.py  __main__.py  assets.py  camera.py  config.py  lidar.py  mcap_writer.py  numba_kernels.py  road_surface.py  ros2_msgdefs.py  scene_compose.py  tf_tree.py  timeline.py  trajectory.py  transforms.py  validate.py
tests/: test_config.py  test_timeline.py  test_transforms.py
